--- a/playbooks/vars/sample-variables-sap-hana-install.yml
+++ b/playbooks/vars/sample-variables-sap-hana-install.yml
@@ -9,7 +9,7 @@
 sap_hana_install_software_directory: /software/hana
 
 # Master password
-sap_hana_install_master_password: 'NewPass$321'
+sap_hana_install_master_password: ''
 
 # Instance details
 sap_hana_install_sid: 'HDB'
